arrumei o banco e as lib