@@ -18,8 +18,8 @@ public class TelaSobre extends javax.swing.JFrame {
      * Creates new form TelaSobre
      */
     public TelaSobre() {
-        //Locale locale = new Locale("en", "US");
-        Locale locale = new Locale("pt", "BR");
+        Locale locale = Locale.of("en", "US");
+        //Locale locale = Locale.of("pt", "BR");
         bundle = ResourceBundle.getBundle("br.com.stockreserve.erp", locale);
         initComponents();
     }
